--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "raf": "^3.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-howler": "^5.0.0",
+    "react-player": "^2.7.2",
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "web-vitals": "^0.2.4"
