--- a/.editorconfig
+++ b/.editorconfig
@@ -6,8 +6,8 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 charset = utf-8
-
-[*.{html, js, json, css, jsx}]
 indent_style = spaces
-indent_size = 2
 max_line_length = 120
+
+[*.{html, json, css}]
+indent_size = 2
